--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -21,7 +21,7 @@ that it gets invoked correctly?</p>
 </b> plug-in provides the API that allows a program to define a configuration
 for launching a program.&nbsp; The program can be launched for regular execution
 or in debug mode, depending on the capabilities of your plug-in.&nbsp; The
-Eclipse Java Development Tools (JDT) use the platform debug support to launch
+Eclipse Java development tooling (JDT) uses the platform debug support to launch
 Java VM's and the Java debugger.&nbsp;&nbsp;</p>
 <p>The <b><a href="../reference/api/org/eclipse/debug/ui/package-summary.html"> org.eclipse.debug.ui</a></b> plug-in includes support for user configuration of
 launch parameters and utility classes that ease the implementation of powerful debuggers.</p>
