*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
@@ -78,7 +78,8 @@ SWT provides special access methods for calling widget and graphics code from a 
 
 
 <H3>
-Executing code from a non-UI thread</H3>
+<a name="syncExec">
+Executing code from a non-UI thread</a></H3>
 <P >
 Applications that wish to call UI code from a non-UI thread must provide a <b> Runnable</b> that calls the UI code. The methods
 <b> syncExec(Runnable) </b> and <b> asyncExec(Runnable)</b> in the
