--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
@@ -10,7 +10,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Adding launchers to the platform</h3>
-<p>Your plug-in can add launch configuration types to the platform using the <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>
+<p>Your plug-in can add launch configuration types to the platform using the <a href="../reference/extension-points/org_eclipse_debug_core_launchConfigurationTypes.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>
 extension point.&nbsp; This extension point allows you to declare a
 configuration type using a unique id.&nbsp; You must provide a corresponding
 implementation of <a href="../reference/api/org/eclipse/debug/core/model/ILaunchConfigurationDelegate.html"><b>ILaunchConfigurationDelegate</b></a>
@@ -40,7 +40,7 @@ configurations can be persisted, source locators may also be stored
 with the launch configuration.&nbsp; This is accomplished by setting an
 attribute of the launch configuration to an id of a source locator.&nbsp; When a
 launch configuration is read from disk, the id of the source locator must be
-mapped back to the implementation class.&nbsp; This is achieved using the <a href="../reference/extension-points/org_eclipse_debug_core_source_locators.html"><b>org.eclipse.debug.core.sourceLocators</b></a>
+mapped back to the implementation class.&nbsp; This is achieved using the <a href="../reference/extension-points/org_eclipse_debug_core_sourceLocators.html"><b>org.eclipse.debug.core.sourceLocators</b></a>
 extension point.&nbsp;</p>
 <p>The extension point allows you to register your class that implements <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.html"><b>IPersistableSourceLocator</b></a>
 and associate it with an id that will be stored with the launch
@@ -51,7 +51,7 @@ classes by id when it's time to instantiate a launch configuration.</p>
 	&lt;sourceLocator
 		id = &quot;org.eclipse.jdt.debug.ui.javaSourceLocator&quot;
 	   	class=&quot;org.eclipse.jdt.debug.ui.JavaUISourceLocator&quot;
-	   	name=&quot;Prompting Java Source Locator&quot;/&gt;
+	   	name=&quot;%javaSourceLocator&quot;/&gt;
 &lt;/extension&gt;</font></pre>
 <h4>Comparing launch configurations</h4>
 <p>Plug-ins use named attributes and values to store important data with a
@@ -64,7 +64,7 @@ method will
 be used if no comparator has been provided.&nbsp; However, some attribute values
 may require special handling, such as stripping white space values from text
 before comparing for equality. </p>
-<p>Comparators are contributed using the <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_comparators.html"><b>org.eclipse.debug.core.launchConfigurationComparators</b></a>
+<p>Comparators are contributed using the <a href="../reference/extension-points/org_eclipse_debug_core_launchConfigurationComparators.html"><b>org.eclipse.debug.core.launchConfigurationComparators</b></a>
 extension point.&nbsp; </p>
 <p>The Java tools supply launch configuration comparators for comparing program
 source paths and class paths.</p>
