--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
@@ -15,12 +15,12 @@ corresponding UI.&nbsp; Users interact with a launch configuration dialog to
 create instances of the different types of launch configurations that have been
 contributed by plug-ins.&nbsp; Each type of launch configuration defines a group
 of tabs that collect and display information about the configuration.&nbsp; The
-tab group for local java applications is shown below.</p>
+tab group for local Java applications is shown below.</p>
 <p><img alt="Launch configuration dialog with contributed tab groups" border="0" src="images/launchdialog.jpg" width="628" height="560" ></p>
 <p>The tabs are contributed using the <a href="../reference/extension-points/org_eclipse_debug_ui_launchConfigurationTabGroups.html"><b>org.eclipse.debug.ui.launchConfigurationTabGroups</b></a>
 extension point.&nbsp;&nbsp;&nbsp; The markup for this extension is
 straightforward. You associate the id of a configuration type (contributed using
-<a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>)
+<a href="../reference/extension-points/org_eclipse_debug_core_launchConfigurationTypes.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>)
 with a class that implements <a href="../reference/api/org/eclipse/debug/ui/ILaunchConfigurationTabGroup.html"><b>ILaunchConfigurationTabGroup</b></a>.&nbsp;
 The Java application tab group is contributed like this:</p>
 <pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.launchConfigurationTabGroups&quot;&gt;
