--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
@@ -23,7 +23,9 @@ configuration type.</p>
 		icon=&quot;icons/full/ctool16/java_app.gif&quot;&gt;
 	&lt;/launchConfigurationTypeImage&gt;	
 &lt;/extension&gt;</font></pre>
-<p>&nbsp;</p>
+<p>Note that in 2.1, to maintain consistency with other extension points that 
+  reference launch configuration types, the <font face="Courier New, Courier, mono">configTypeID</font> 
+  attribute may also be specified as <font face="Courier New, Courier, mono">type</font>.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
 </BODY>
 </HTML>
