*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uishortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uishortcuts.htm
@@ -25,6 +25,7 @@ editor.</p>
 		class=&quot;org.eclipse.jdt.internal.debug.ui.launcher.JavaApplicationShortcut&quot;
 		label=&quot;%JavaApplicationShortcut.label&quot;
 		icon=&quot;icons/full/ctool16/java_app.gif&quot;
+		helpContextId=&quot;org.eclipse.jdt.debug.ui.shortcut_local_java_application&quot;
 		modes=&quot;run, debug&quot;&gt;
 		&lt;perspective id=&quot;org.eclipse.jdt.ui.JavaPerspective&quot;/&gt;
 		&lt;perspective id=&quot;org.eclipse.jdt.ui.JavaHierarchyPerspective&quot;/&gt;
