*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_breakpoints.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_breakpoints.htm
@@ -22,11 +22,11 @@ reason.&nbsp; </p>
 need to define their own breakpoint types.&nbsp; You can implement breakpoints
 for your particular debug model by defining a class that implements <a href="../reference/api/org/eclipse/debug/core/model/IBreakpoint.html"><b>IBreakpoint</b></a>.&nbsp;
 </p>
-<p>Breakpoints are implemented using <a href="resAdv_markers.htm">resource
-markers</a>.&nbsp; Recall that resource markers allow you to associate meta
-information about a resource in the form of named attributes.&nbsp; By
-implementing a breakpoint using markers, the debug model can make use of all the
-existing marker function such as persistence, searching, adding, and deleting.</p>
+<p>Breakpoints are implemented using <a href="resAdv_markers.htm">resource markers</a>.&nbsp; 
+  Recall that resource markers allow you to associate meta information about a 
+  resource in the form of named attributes.&nbsp; By implementing a breakpoint 
+  using markers, the debug model can make use of all the existing marker function 
+  such as persistence, searching, adding, deleting, and displaying in editors.</p>
 <p>Why is it important to know about markers when using breakpoints?&nbsp; When
 you create a breakpoint type, you must also specify an associated marker
 type.&nbsp; Every extension of <a href="../reference/extension-points/org_eclipse_debug_core_breakpoints.html"><b>org.eclipse.debug.core.breakpoints</b></a>
@@ -51,14 +51,14 @@ tooling for Java breakpoints.</p>
 		class=&quot;org.eclipse.jdt.internal.debug.core.breakpoints.JavaExceptionBreakpoint&quot;&gt;
 	&lt;/breakpoint&gt;
 &lt;/extension&gt;</font></pre>
-<p>The debug plug-in defines a special type of marker, <font SIZE="2"><b>org.eclipse.debug.core.breakpointMarker</b>.&nbsp;
-When you define a marker, you should declare it using this marker as a super
-type.&nbsp; This allows the debug model to find all possible breakpoints within
-a source file by searching for subtypes of its marker.&nbsp; In the example
-above, the <b>javaExceptionBreakpointMarker</b> has a super type, <b>javaBreakpointMarker</b>,
-whose super type is the <b>breakpointMarker</b>.&nbsp; The <b>javaExceptionBreakpoint</b>&nbsp;
-(defined in the break point extension) designates the <b>javaExceptionBreakpointMarker</b>
-as its marker.</font></p>
+<p>The debug plug-in defines a special type of marker, <font SIZE="2"><b>org.eclipse.debug.core.breakpointMarker</b>.&nbsp; 
+  When you define a marker, you should declare it using this marker as a super 
+  type.&nbsp; This allows the debug model to find all possible breakpoints within 
+  a source file by searching for subtypes of its marker.&nbsp; In the example 
+  above, the <b>javaExceptionBreakpointMarker</b> has a super type, <b>javaBreakpointMarker</b>, 
+  whose super type is the <b>breakpointMarker</b>.&nbsp; The <b>javaExceptionBreakpoint</b>&nbsp; 
+  (defined in the breakpoint extension) designates the <b>javaExceptionBreakpointMarker</b> 
+  as its marker.</font></p>
 <p><font size="2">What does all of this mean?&nbsp; When the debug code obtains
 a source code resource, it can search for all markers whose super type is <b>org.eclipse.debug.core.breakpointMarker</b>.&nbsp;
 Having found all of the markers, it can then use the plug-in registry to map the
