--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_debug.htm
@@ -16,11 +16,11 @@ supports.&nbsp; If you support debug mode, then you need to implement a debug
 model and UI that allow users to interact with your programs under debug.&nbsp;
 The core platform debug plug-in provides support for&nbsp;</p>
 <ul>
-  <li> a general debugging model</li>
+  <li> a generic debug model</li>
   <li>debug
 events and listeners</li>
   <li>breakpoint management</li>
-  <li>expression evaluation&nbsp;</li>
+  <li>expression management&nbsp;</li>
 </ul>
 <p>The debug UI plug-in provides utility classes for implementing debug user
 interfaces.</p>
