*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
@@ -25,23 +25,7 @@ group should be shown in debugger views by default.&nbsp; The user can change
 the visibility from the preferences dialog.</p>
 <p>The following example shows the markup for the debug action groups in the
 Java debugger:</p>
-<pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.debugActionGroups&quot;&gt;
-	&lt;debugActionGroup
-		id = &quot;org.eclipse.jdt.debug.ui.javaDebugActionGroup&quot;
-	   	visible=&quot;true&quot;
-	   	name=&quot;Java Debug&quot;&gt;
-	   	&lt;action id=&quot;org.eclipse.jdt.ui.breakpointViewActions.ShowQualified&quot;/&gt;
-	   	&lt;action id=&quot;org.eclipse.jdt.debug.ui.actions.AddException&quot;/&gt;
-	   	&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowQualified&quot;/&gt;
-		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowStaticFields&quot;/&gt;
-		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowFinalFields&quot;/&gt;
-		&lt;action id=&quot;org.eclipse.jdt.ui.launchViewActions.ShowQualified&quot;/&gt;
-		&lt;action id=&quot;org.eclipse.jdt.ui.actions.ToggleStepFilter&quot;/&gt;
-		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowQualified&quot;/&gt;
-		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowStaticFields&quot;/&gt;
-		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowFinalFields&quot;/&gt;
-	&lt;/debugActionGroup&gt;
-&lt;/extension&gt;</font></pre>
+<pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.debugActionGroups&quot;&gt;<br>	&lt;debugActionGroup<br>		id = &quot;org.eclipse.jdt.debug.ui.javaDebugActionGroup&quot;<br>	   	visible=&quot;true&quot;<br>	   	name=&quot;%JavaDebugActionGroup.name&quot;&gt;<br>	   	&lt;action id=&quot;org.eclipse.jdt.debug.ui.actions.AddException&quot;/&gt;<br>	   	&lt;action id=&quot;org.eclipse.jdt.ui.breakpointViewActions.ShowQualified&quot;/&gt;<br>	   	&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowQualified&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.AddWatchExpression&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.launchViewActions.ShowQualified&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowQualified&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowStatic&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowStatic&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowConstants&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowConstants&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.PrimitiveOptions&quot;/&gt;<br>		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.PrimitiveOptions&quot;/&gt;<br>	&lt;/debugActionGroup&gt;<br>&lt;/extension&gt;</font></pre>
 <p>Note that the name specified in the extension point is what appears in the
 preferences dialog.</p>
 <p><img border="0" src="images/debugactiongroups.jpg" width="606" height="532" alt="Preferences dialog with debug action groups"></p>
