*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences_prefs_fieldeditors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences_prefs_fieldeditors.htm
@@ -25,10 +25,10 @@ retrieve the values of the controls. The
 <b> field editors</b>, that create the widgets and implement the value setting and retrieval code for the most common preference types. The platform provides field editors for displaying and updating many value types, including booleans, colors, strings, integers, fonts, and file names.</P>
 <P >
  <b><a href="../reference/api/org/eclipse/jface/preference/FieldEditorPreferencePage.html"> FieldEditorPreferencePage</a></b> implements a
-page that uses these field editors to display and store the preference values on the page.</P>
-<P >
-Instead of creating SWT controls to fill its contents, a <b><a href="../reference/api/org/eclipse/jface/preference/FieldEditorPreferencePage.html"> FieldEditorPreferencePage</a></b> 
-subclass creates field editors to display the contents.&nbsp; The following is a
+page that uses these field editors to display and store the preference values on the page.&nbsp;
+ Instead of creating SWT controls to fill its contents, a <b><a href="../reference/api/org/eclipse/jface/preference/FieldEditorPreferencePage.html"> FieldEditorPreferencePage</a></b> 
+subclass creates field editors to display the contents.&nbsp; All of the fields
+ on the page must be implemented as field editors.&nbsp; The following is a
 snippet from the debug UI preferences page:</P>
 <font color='#4444CC'><pre>protected void createFieldEditors() {
 	addField(new BooleanFieldEditor(IDebugUIConstants.PREF_BUILD_BEFORE_LAUNCH, 
