--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop_contribute.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop_contribute.htm
@@ -13,10 +13,11 @@ Contributing a property page
 <BODY BGCOLOR="#ffffff">
 <h3>Contributing a property page</h3>
 <P >
-You can contribute a property page for a resource by using the
+You can contribute a property page for an object by using the
 <a href="../reference/extension-points/org_eclipse_ui_propertyPages.html"> <b> org.eclipse.ui.propertyPages</b></a> extension point.
-A resource's property page is invoked using the <b>Properties </b>menu in the
-resource navigator view.&nbsp; This menu is available when a single resource is
+An object's property page is invoked using the <b>Properties </b>menu in any
+view that shows objects, such as the resource navigator view.&nbsp; This menu is available when a single
+object is
 selected.&nbsp;</P>
 <P >The readme tool contributes two property pages.</P>
 <font color='#4444CC'><pre>
@@ -38,9 +39,15 @@ selected.&nbsp;</P>
          &lt;/page&gt;
   &lt;/extension&gt;
 </pre></font>
-<P >
-Both pages are contributed for objects of type <b><a href="../reference/api/org/eclipse/core/resources/IFile.html"> IFile</a></b> with a
+<P >When you define a property page, you specify the <b>objectClass</b> for
+which this page is valid.&nbsp; Objects of this class will include your page
+when the properties are shown.&nbsp; You may optionally supply a <b>nameFilter</b>
+that further refines the class.&nbsp; In the readme tool example, both pages are contributed for objects of type <b><a href="../reference/api/org/eclipse/core/resources/IFile.html"> IFile</a></b> with a
 <b>.readme</b> file extension. </P>
+<P >Property pages are not limited to workbench resources.&nbsp; All objects
+showing up in the workbench (even domain-specific objects created by other
+plug-ins) may have property pages.&nbsp; Any plug-in may register property pages
+for any object type. </P>
 <P >
 Property pages look a lot like preference pages, except there is no hierarchy or categorization of property pages. In the dialog below, both readme property pages appear in the main list of pages.</P>
 <P >
