--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences_prefs_implement.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences_prefs_implement.htm
@@ -65,7 +65,13 @@ Here is what the corresponding page looks like:</P>
 <img border="0" src="images/readmepreferences.jpg" width="606" height="532" alt="Readme tool preferences page"></P>
 <P >
 The other primary responsibility of a preference page is to react to the <b> performOk</b> message. Typically, this method
-updates and stores the user preferences and, if necessary, updates any other plug-in objects to reflect the change in preferences.</P>
+updates and stores the user preferences and, if necessary, updates any other plug-in objects to reflect the change in preferences.&nbsp;
+The <b>performDefaults</b> method is used to restore preferences to their
+default state when the user presses the <b>Restore Defaults</b>
+button.&nbsp;&nbsp;</P>
+<P >
+You may override <b>performApply</b> if you have additional processing when the
+user selects <b>Apply</b>.&nbsp; The default implementation is to call <b>performOk</b>.&nbsp;&nbsp;</P>
 <P >
 Preference pages should override the <b> doGetPreferenceStore()</b> method to return a preference store for storing their values. </P>
 
