*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
@@ -23,11 +23,11 @@
   most people just want to know up front that they may have to merge their changes 
   on commit, <em>edit</em> on its own is sufficient for most. Another advantage 
   to using just <em>edit</em> is that it doesn't require any administrative changes 
-  to the server, while as <em>watch</em> does. All that <em>watches</em> give 
-  up above this is the email notification that some file you are watching is being 
+  to the server, where as <em>watch</em> does. All that <em>watches</em> gives 
+  above this is the email notification that some file you are watching is being 
   modified.</p>
 <p class="Para">For these reasons, <em>edit</em> is supported natively by Team 
-  CVS while as <em>watch</em> isn't.</p>
+  CVS where as <em>watch</em> isn't.</p>
 <h3 class="Para">Setting up Watches</h3>
 <p class="Para">As mentioned, you can't set watches in Team CVS. If you are interested 
   in doing this, you should consult your cvs documentation. In brief though, this 
